{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 10,
  "lineage": "372f27d9-99ba-e1b2-bd48-7967697ea835",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "krishna_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418322007:internet-gateway/igw-0006bfade1f54f038",
            "id": "igw-0006bfade1f54f038",
            "owner_id": "905418322007",
            "vpc_id": "vpc-023036a866360e34d"
          },
          "dependencies": [
            "aws_vpc.krishna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "krishna_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418322007:route-table/rtb-0d4abc5cd5e129d74",
            "id": "rtb-0d4abc5cd5e129d74",
            "owner_id": "905418322007",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0006bfade1f54f038",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023036a866360e34d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.krishna_internet_gateway",
            "aws_vpc.krishna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "krisha_security_gropus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418322007:security-group/sg-035e9769cca6f449d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035e9769cca6f449d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http form vpc",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "905418322007",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "web_sg"
            },
            "tags_all": {
              "name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023036a866360e34d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.krishna_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "krishna_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418322007:vpc/vpc-023036a866360e34d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0404b48f179f82584",
            "default_route_table_id": "rtb-0f830806d1d3e5a43",
            "default_security_group_id": "sg-02ca63ddd6ea7e6b4",
            "dhcp_options_id": "dopt-09f4a22b0acb77fef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023036a866360e34d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f830806d1d3e5a43",
            "owner_id": "905418322007"
          }
        }
      ]
    }
  ]
}